--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
+    "jquery-ujs": "^1.2.2",
+    "jquery.turbolinks": "^2.1.0",
     "laravel-elixir": "^6.0.0-11",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
+    "turbolinks": "^5.0.0",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
   }
